подключение плавного передвижения по секциям через js  вмести с бургиром

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>leader</title>
   <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/index.css">
@@ -18,13 +19,13 @@
           <a href="#home" class="link__text">home</a>
         </li>
         <li class="list__text">
-          <a href="#portfolio" class="link__text">portfolio</a>
+          <a href="#portfolio" class="link__text link__portfolio">portfolio</a>
         </li>
         <li class="list__text">
-          <a href="#aboutUs" class="link__text">about us</a>
+          <a href="#aboutUs" class="link__text link__about">about us</a>
         </li>
         <li class="list__text">
-          <a href="#contact" class="link__text">contact</a>
+          <a href="#contact" class="link__text link__contact">contact</a>
         </li>
       </ul>
       <div class="burger">
@@ -35,16 +36,16 @@
       <div class="burger__popup">
         <ul class="header__list__burger">
           <li class="list__text__burger">
-            <a href="#home" class="link__text__burger">home</a>
+            <a href="#home" class="link__text__burger link__home__burger">home</a>
           </li>
           <li class="list__text__burger">
-            <a href="#portfolio" class="link__text__burger">portfolio</a>
+            <a href="#portfolio" class="link__text__burger link__portfolio__burger">portfolio</a>
           </li>
           <li class="list__text__burger">
-            <a href="#aboutUs" class="link__text__burger">about us</a>
+            <a href="#aboutUs" class="link__text__burger link__about__burger">about us</a>
           </li>
           <li class="list__text__burger">
-            <a href="#contact" class="link__text__burger">contact</a>
+            <a href="#contact" class="link__text__burger link__contact__burger">contact</a>
           </li>
         </ul>
       </div>
@@ -82,7 +83,7 @@
           <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
             seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
         </div>
-        <div class="second__common__two">
+        <div class="second__common">
           <img src="./images/kar.svg" alt="user design" class="img">
           <h2 class="second__heading__text">UI /UX Design</h2>
           <p class="second__text__communis">Lorem ipsum dolor sitea amet,
@@ -145,7 +146,7 @@
       </li>
     </ul>
   </section>
-  <section class="section__four" id="aboutUs">
+  <section class="section__four" id="about">
     <div class="four__common">
       <div class="four__left">
         <h2 class="four__heading">Meet our team</h2>
@@ -197,7 +198,7 @@
       </div>
     </div>
   </section>
-  <section class="five" id="contact">
+  <section class="five">
     <div class="five__box__text">
       <h2 class="five__heading">Design tips, tricks, and freebies. Delivered weekly.</h2>
       <p class="five__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
@@ -208,7 +209,7 @@
     </form>
   </section>
   <section class="six">
-    <div class="six__box__left">
+    <div class="six__box__left" id="contact">
       <h2 class="six__heading">get in touch</h2>
       <p class="six__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt
         ut
