--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <div class="second__right">
         <div class="second__common">
-          <img src="./images/kol.svg" alt="Management" class="img">
+          <img src="./images/kol.svg" alt="gear wheel" class="img">
           <h2 class="second__heading__text">Management</h2>
           <p class="second__text__communis">Lorem ipsum dolor sitea amet,
             zixf conseit adipi cing elit,
