--- a/index.html
+++ b/index.html
@@ -104,45 +104,77 @@
     <div class="line"></div>
     <ul class="third__list">
       <li class="third__text__list">
-        <a href="#" class="third__link">all</a>
+        <button class="button" type="button">весь-чай </button>
       </li>
       <li class="third__text__list">
-        <a href="#" class="third__link">print template</a>
+        <button class=" button button__shu" type="button">шу-пуэр</a>
       </li>
       <li class="third__text__list">
-        <a href="#" class="third__link">web template</a>
+        <button class="button button__shen" type="button">шен-пуэр</a>
       </li>
       <li class="third__text__list">
-        <a href="#" class="third__link">user interface</a>
+        <button class="button button__pao" type="button">да-хун-пао</button>
       </li>
       <li class="third__text__list">
-        <a href="#" class="third__link">mock-up</a>
+        <button class="button button__yin" type="button">тегуань-инь</button>
       </li>
     </ul>
     <ul class="third__section__product">
       <li class="product">
         <img src="./images/1.jpg" alt="shu puer" class="image">
+        <img src="./images/p1.jpg" alt="shu puer" class="image shu">
+        <img src="./images/sh1.jpg" alt="shen puer" class="image shen">
+        <img src="./images/d1.jpg" alt="da hong pao" class="image pao">
+        <img src="./images/t1.jpg" alt="teguanyin" class=" image yin">
       </li>
       <li class="product">
         <img src="./images/2.jpg" alt="puer" class="image">
+        <img src="./images/p2.jpg" alt="shu puer" class="image shu">
+        <img src="./images/sh2.jpg" alt="shen puer" class="image shen">
+        <img src="./images/d2.jpg" alt="da hong pao" class="image pao">
+        <img src="./images/t2.jpg" alt="teguanyin" class="image yin">
       </li>
       <li class="product">
         <img src="./images/3.jpg" alt="da hong pao light" class="image">
+        <img src="./images/p3.jpg" alt="shu puer" class="image shu">
+        <img src="./images/sh3.jpg" alt="shen puer" class="image shen">
+        <img src="./images/d3.jpg" alt="da hong pao" class="image pao">
+        <img src="./images/t3.jpg" alt="teguanyin" class="image yin">
       </li>
       <li class="product">
         <img src="./images/4.jpg" alt="da hong pao" class="image">
+        <img src="./images/p4.jpg" alt="shu puer" class="image shu">
+        <img src="./images/sh4.jpg" alt="shen puer" class="image shen">
+        <img src="./images/d4.jpg" alt="da hong pao" class="image pao">
+        <img src="./images/t4.jpg" alt="teguanyin" class="image yin">
       </li>
       <li class="product">
         <img src="./images/5.jpg" alt="teguanyin heavy" class="image">
+        <img src="./images/p5.jpg" alt="shu puer" class="image shu">
+        <img src="./images/sh5.jpg" alt="shen puer" class="image shen">
+        <img src="./images/d5.jpg" alt="da hong pao" class="image pao">
+        <img src="./images/t5.jpg" alt="teguanyin" class="image yin">
       </li>
       <li class="product">
         <img src="./images/6.jpg" alt="teguanyin" class="image">
+        <img src="./images/p6.jpg" alt="shu puer" class="image shu">
+        <img src="./images/sh6.jpg" alt="shen puer" class="image shen">
+        <img src="./images/d6.jpg" alt="da hong pao" class="image pao">
+        <img src="./images/t6.jpg" alt="teguanyin" class="image yin">
       </li>
       <li class=" product">
         <img src="./images/7.jpg" alt="teguanyin green" class="image">
+        <img src="./images/p7.jpg" alt="shu puer" class="image shu">
+        <img src="./images/sh7.jpg" alt="shen puer" class="image shen">
+        <img src="./images/d7.jpg" alt="da hong pao" class="image pao">
+        <img src="./images/t7.jpg" alt="teguanyin" class="image yin">
       </li>
       <li class="product">
         <img src="./images/8.jpg" alt="white tea" class="image">
+        <img src="./images/p8.jpg" alt="shu puer" class="image shu">
+        <img src="./images/sh8.jpg" alt="shen puer" class="image shen">
+        <img src="./images/d8.jpg" alt="da hong pao" class="image pao">
+        <img src="./images/t8.jpg" alt="teguanyin" class="image yin">
       </li>
     </ul>
   </section>
