--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         <button class="button" type="button">весь-чай </button>
       </li>
       <li class="third__text__list">
-        <button class=" button button__shu" type="button">шу-пуэр</a>
+        <button class=" button button__shu" type="button">шу-пуэр</button>
       </li>
       <li class="third__text__list">
-        <button class="button button__shen" type="button">шен-пуэр</a>
+        <button class="button button__shen" type="button">шен-пуэр</button>
       </li>
       <li class="third__text__list">
         <button class="button button__pao" type="button">да-хун-пао</button>
