--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
           sed do eiusmod tempor incididunt.</p>
         <button class="one__button" type="button">Contact Us</button>
       </div>
-      <iframe class="one__video" src="https://www.youtube.com/embed/6W8HBGC8MTA"
-        title="ТОП-5 Альтернатив китайскому чаю Да Хун Пао"></iframe>
+      <iframe class="one__video" src="https://www.youtube.com/embed/pv_JphcaWeQ"
+        title="Завариваем Пуэр, Те Гуань Инь, Да Хун Пао + рассказ о эффекте каждого" allow="accelerometer;
+         autoplay; clipboard-write; encrypted-media;
+      gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
   </div>
   <section class="second" id="portfolio">
@@ -73,23 +75,23 @@
       </div>
       <div class="second__right">
         <div class="second__common">
-          <img src="./images/kol.svg" alt="gear wheel" class="img">
+          <img src="./images/kol.svg" alt="gear wheel" class="img__wheel">
           <h2 class="second__heading__text">Management</h2>
           <p class="second__text__communis">Lorem ipsum dolor sitea amet,
             zixf conseit adipi cing elit,
             seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
-          <img src="./images/logo.svg" alt="Logo/Branding" class="img">
+          <img src="./images/logo.svg" alt="Logo/Branding" class="img__ruby">
           <h2 class="second__heading__text">Logo/Branding</h2>
           <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
             seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
         </div>
         <div class="second__common">
-          <img src="./images/kar.svg" alt="user design" class="img">
+          <img src="./images/kar.svg" alt="user design" class="img__kar">
           <h2 class="second__heading__text">UI /UX Design</h2>
           <p class="second__text__communis">Lorem ipsum dolor sitea amet,
             zixf conseit adipi cing elit,
             seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor </p>
-          <img src="./images/trans.png" alt="Animation" class="img">
+          <img src="./images/trans.png" alt="Animation" class="img__trans">
           <h2 class="second__heading__text">Animation</h2>
           <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
             seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet,</p>
@@ -107,7 +109,7 @@
         <button class="button" type="button">весь-чай </button>
       </li>
       <li class="third__text__list">
-        <button class=" button button__shu" type="button">шу-пуэр</button>
+        <button class="button button__shu" type="button">шу-пуэр</button>
       </li>
       <li class="third__text__list">
         <button class="button button__shen" type="button">шен-пуэр</button>
