--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <p class="second__text__communis">Lorem ipsum dolor sitea amet,
             zixf conseit adipi cing elit,
             seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
-          <img src="./images/logo.svg" alt="Logo/Branding" class="img__ruby">
+          <img src="./images/ruby.png" alt="Logo/Branding" class="img__ruby">
           <h2 class="second__heading__text">Logo/Branding</h2>
           <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
             seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
