--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <button class="button button__yin" type="button">тегуань-инь</button>
       </li>
     </ul>
-    <!--    <ul class="third__section__product">
+    <ul class="third__section__product">
       <li class="product">
         <img src="https://avatars.mds.yandex.net/get-mpic/5330487/img_id2818094030675664105.jpeg/orig" alt="пуэр чёрный"
           class="image" width="240" height="240">
@@ -216,7 +216,7 @@
           width="240" height="240" loading="lazy">
         <img src="https://chinabeijingprivatetour.com/upload/ueditor/image/20171206/6364816944825097657640253.jpg"
           alt="красивый скрут" class="image yin" width="240" height="240" loading="lazy">
-      </li>-->
+      </li>
     </ul>
   </section>
   <section class="section__four" id="about">
