--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
             seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
         </div>
-        <div class="second__common">
+        <div class="second__commond">
           <img src="./images/kar.svg" alt="user design" class="img__kar">
           <h2 class="second__heading__text">UI /UX Design</h2>
           <p class="second__text__communis">Lorem ipsum dolor sitea amet,
