--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           sed do eiusmod tempor incididunt.</p>
         <button class="one__button" type="button">Contact Us</button>
       </div>
-      <video class="one__video" src="./Университет Иннополис обновил логотип в честь десятилетия.mp4" controls></video>
+      <video class="one__video" src="./lootip.mp4" controls></video>
     </section>
   </div>
   <section class="second" id="portfolio">
