--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>leader</title>
   <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/index.css">
+  <link rel="stylesheet" href="./styles/futer,one.css">
+  <link rel="stylesheet" href="./styles/second.css">
+  <link rel="stylesheet" href="./styles/third.css">
+  <link rel="stylesheet" href="./styles/four.css">
+  <link rel="stylesheet" href="./styles/five.css">
+  <link rel="stylesheet" href="./styles/six,footer.css">
 </head>
 
 <body class="root" id="home">
@@ -71,7 +76,7 @@
         <button class="second__button" type="button">Learn More</button>
       </div>
       <div class="second__right">
-        <div class="second__common">
+        <div class="second__right__first">
           <img src="./images/kol.svg" alt="gear wheel" class="img__wheel">
           <h2 class="second__heading__text">Management</h2>
           <p class="second__text__communis">Lorem ipsum dolor sitea amet,
@@ -82,7 +87,7 @@
           <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
             seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
         </div>
-        <div class="second__commond">
+        <div class="second__right__second">
           <img src="./images/kar.svg" alt="user design" class="img__kar">
           <h2 class="second__heading__text">UI /UX Design</h2>
           <p class="second__text__communis">Lorem ipsum dolor sitea amet,
