--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>leader</title>
   <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/futer,one.css">
+  <link rel="stylesheet" href="./styles/heder,one.css">
   <link rel="stylesheet" href="./styles/second.css">
   <link rel="stylesheet" href="./styles/third.css">
   <link rel="stylesheet" href="./styles/four.css">
