--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>leader</title>
   <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/heder,one.css">
+  <link rel="stylesheet" href="./styles/heder.one.css">
   <link rel="stylesheet" href="./styles/second.css">
   <link rel="stylesheet" href="./styles/third.css">
   <link rel="stylesheet" href="./styles/four.css">
   <link rel="stylesheet" href="./styles/five.css">
-  <link rel="stylesheet" href="./styles/six,footer.css">
+  <link rel="stylesheet" href="./styles/six.footer.css">
 </head>
 
 <body class="root" id="home">
