вернул всё обратно

--- a/index.html
+++ b/index.html
@@ -135,40 +135,47 @@
         <img src="./images/8.jpg" alt="тегуань-инь ромашка" class="image" width="240" height="240">
       </li>
       <li class="product">
-        <img src="./images/p1.jpg" alt="еу линь" class="image shu" width="240" height="240">
-        <img src="./images/p2.jpg" alt="гуи" class="image shu" width="240" height="240">
-        <img src="./images/p3.jpg" alt="грозный" class="image shu" width="240" height="240">
-        <img src="./images/p4.jpg" alt="дворцовый" class="image shu" width="240" height="240">
-        <img src="./images/p5.jpg" alt="старое дерево" class="image shu" width="240" height="240">
-        <img src="./images/p6.jpg" alt="древенистый" class="image shu" width="240" height="240">
-        <img src="./images/p7.jpg" alt="вишнёвый" class="image shu" width="240" height="240">
-        <img src="./images/p8.jpg" alt="гун тин" class="image shu" width="240" height="240">
+        <img src="./images/p1.jpg" alt="еу линь" class="image shu" width="240" height="240" loading="lazy">
+        <img src="./images/p2.jpg" alt="гуи" class="image shu" width="240" height="240" loading="lazy">
+        <img src="./images/p3.jpg" alt="грозный" class="image shu" width="240" height="240" loading="lazy">
+        <img src="./images/p4.jpg" alt="дворцовый" class="image shu" width="240" height="240" loading="lazy">
+        <img src="./images/p5.jpg" alt="старое дерево" class="image shu" width="240" height="240" loading="lazy">
+        <img src="./images/p6.jpg" alt="древенистый" class="image shu" width="240" height="240" loading="lazy">
+        <img src="./images/p7.jpg" alt="вишнёвый" class="image shu" width="240" height="240" loading="lazy">
+        <img src="./images/p8.jpg" alt="гун тин" class="image shu" width="240" height="240" loading="lazy">
       </li>
       <li class="product">
-        <img src="./images/sh1.jpg" alt="шен девятилетний" class="image shen" width="240" height="240">
-        <img src="./images/sh2.jpg" alt="шенчик светлый" class="image shen" width="240" height="240">
-        <img src="./images/sh3.jpg" alt="для хорошего общения" class="image shen" width="240" height="240">
-        <img src="./images/sh4.jpg" alt="шен листья с горов" class="image shen" width="240" height="240">
-        <img src="./images/sh5.jpg" alt="шен сигуй" class="image shen" width="240" height="240">
-        <img src="./images/sh6.jpg" alt="шен пуэр хвала шенам" class="image shen" width="240" height="240">
-        <img src="./images/sh7.jpg" alt="шен пуэр дашу в кубе" class="image shen" width="240" height="240">
-        <img src="./images/sh8.jpg" alt="шен лао мань" class="img shen" width="240" height="240">
+        <img src="./images/sh1.jpg" alt="шен девятилетний" class="image shen" width="240" height="240" loading="lazy">
+        <img src="./images/sh2.jpg" alt="шенчик светлый" class="image shen" width="240" height="240" loading="lazy">
+        <img src="./images/sh3.jpg" alt="для хорошего общения" class="image shen" width="240" height="240"
+          loading="lazy">
+        <img src="./images/sh4.jpg" alt="шен листья с горов" class="image shen" width="240" height="240" loading="lazy">
+        <img src="./images/sh5.jpg" alt="шен сигуй" class="image shen" width="240" height="240" loading="lazy">
+        <img src="./images/sh6.jpg" alt="шен пуэр хвала шенам" class="image shen" width="240" height="240"
+          loading="lazy">
+        <img src="./images/sh7.jpg" alt="шен пуэр дашу в кубе" class="image shen" width="240" height="240"
+          loading="lazy">
+        <img src="./images/sh8.jpg" alt="шен лао мань" class="img shen" width="240" height="240" loading="lazy">
       </li>
       <li class="product">
-        <img src="./images/d1.jpg" alt="дахун цветочный" class="image pao" width="240" height="240">
-        <img src="./images/d2.jpg" alt="пау джу ти" class="image pao" width="240" height="240">
-        <img src="./images/d3.jpg" alt="настоящий дахун пао" class="image pao" width="240" height="240">
-        <img src="./images/d4.jpg" alt="большой красный халат" class="image pao" width="240" height="240">
-        <img src="./images/d5.jpg" alt="эффект опьянения" class="image pao" width="240" height="240">
-        <img src="./images/d6.jpg" alt="дахун на ночь" class="image pao" width="240" height="240">
-        <img src="./images/d7.jpg" alt="пао золотой" class="image pao" width="240" height="240">
-        <img src="./images/d8.jpg" alt="да-хун-пао обычный" class="image pao" width="240" height="240">
+        <img src="./images/d1.jpg" alt="дахун цветочный" class="image pao" width="240" height="240" loading="lazy">
+        <img src="./images/d2.jpg" alt="пау джу ти" class="image pao" width="240" height="240" loading="lazy">
+        <img src="./images/d3.jpg" alt="настоящий дахун пао" class="image pao" width="240" height="240" loading="lazy">
+        <img src="./images/d4.jpg" alt="большой красный халат" class="image pao" width="240" height="240"
+          loading="lazy">
+        <img src="./images/d5.jpg" alt="эффект опьянения" class="image pao" width="240" height="240" loading="lazy">
+        <img src="./images/d6.jpg" alt="дахун на ночь" class="image pao" width="240" height="240" loading="lazy">
+        <img src="./images/d7.jpg" alt="пао золотой" class="image pao" width="240" height="240" loading="lazy">
+        <img src="./images/d8.jpg" alt="да-хун-пао обычный" class="image pao" width="240" height="240" loading="lazy">
       </li>
       <li class="product">
-        <img src="./images/t1.jpg" alt="тегуань-инь" class="image yin" width="240" height="240">
-        <img src="./images/t2.jpg" alt="тегуань-инь расслаьляющий" class="image yin" width="240" height="240">
-        <img src="./images/t3.jpg" alt="тегуань-инь категории А" class="image yin" width="240" height="240">
-        <img src="./images/t4.jpg" alt="тегуань-инь для настроения" class="image yin" width="240" height="240">
+        <img src="./images/t1.jpg" alt="тегуань-инь" class="image yin" width="240" height="240" loading="lazy">
+        <img src="./images/t2.jpg" alt="тегуань-инь расслаьляющий" class="image yin" width="240" height="240"
+          loading="lazy">
+        <img src="./images/t3.jpg" alt="тегуань-инь категории А" class="image yin" width="240" height="240"
+          loading="lazy">
+        <img src="./images/t4.jpg" alt="тегуань-инь для настроения" class="image yin" width="240" height="240"
+          loading="lazy">
         <img src="./images/t5.jpg" alt="тегуань-инь" class="image yin" width="240" height="240" loading="lazy">
         <img src="./images/t6.jpg" alt="наполнет свежестью" class="image yin" width="240" height="240" loading="lazy">
         <img src="./images/t7.jpg" alt="зелённая свежесть" class="image yin" width="240" height="240" loading="lazy">
