--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="four__line"></div>
       </div>
       <div class="four__box">
-        <img src="./images/nac.jpg" alt="chief" class="four__photo__chief">
+        <img src="./images/nac.jpg" alt="chief" class="four__photo__chief" width="300" height="462">
         <div class="four__right">
           <div class="four__info__right">
             <span class="four__chief__name">mark waugh</span>
@@ -216,19 +216,19 @@
           <ul class="four__photos">
             <li class="four__photo">
               <h3 class="four__worker__name">Stepanov Ivan</h3>
-              <img src="./images/c1.jpg" alt="employee" class="four__photo__worker">
+              <img src="./images/c1.jpg" alt="employee" class="four__photo__worker" width="160" height="260">
             </li>
             <li class="four__photo">
               <h3 class="four__worker__name">Vikol Alexander</h3>
-              <img src="./images/c2.jpeg" alt="employee" class="four__photo__worker">
+              <img src="./images/c2.jpeg" alt="employee" class="four__photo__worker" width="160" height="260">
             </li>
             <li class="four__photo">
               <h3 class="four__worker__name">Ivanov Anton</h3>
-              <img src="./images/c3.jpg" alt="employee" class="four__photo__worker">
+              <img src="./images/c3.jpg" alt="employee" class="four__photo__worker" width="160" height="260">
             </li>
             <li class="four__photo">
               <h3 class="four__worker__name">Borisov Maksim</h3>
-              <img src="./images/c4.jpg" alt="employee" class="four__photo__worker">
+              <img src="./images/c4.jpg" alt="employee" class="four__photo__worker" width="160" height="260">
             </li>
           </ul>
         </div>
