--- a/index.html
+++ b/index.html
@@ -270,11 +270,12 @@
     </div>
   </section>
   <footer class="footer">
+    <div class="footer__link__box">
     <p class="footer__text">© Copyright @Junaed 2016, All rights reserved.s</p>
     <ul class="footer__links">
       <li>
         <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
-          <img src="./images/телеграмм.svg" alt="лого телеграмм" class="footer__igp">
+          <img src="images/telega.png" alt="лого телеграмм" class="footer__igp">
         </a>
       </li>
       <li>
@@ -289,10 +290,11 @@
       </li>
       <li>
         <a class="footer__link" href="https://ok.ru/messages" target="_blank">
-          <img src="./images/одноклассники.png" alt="лого ok" class="footer__igp">
+          <img src="images/ok.png" alt="лого ok" class="footer__igp">
         </a>
       </li>
     </ul>
+    </div>
   </footer>
   <script defer src="./index.js"></script>
   <script defer src="./burger.js"></script>
